# Leaf-Diploma-Project

./: .gitignore  Cargo.toml  test.txt  test1.txt
.github/workflows/: rust.yml
client/: Cargo.toml
client-cli/: Cargo.toml
client/src/: args.rs  hashes.rs  lib.rs  main.rs  parts.rs  peer.rs  socket.rs
common/: Cargo.toml
common/src/: chunks.rs  crypto.rs  lib.rs  message.rs  shared_secret.rs
leaf-client/: .gitignore  Cargo.toml  go.mod  main.go
leaf-client/src/: lib.rs  main.rs  peer.rs
leaf-client/src/lib/: mod.rs  peer.rs
leaf-common/: Cargo.toml
leaf-common/src/: codec.rs  consts.rs  crypto.rs  hash.rs  lib.rs  message.rs  shared_secret.rs
leaf-server/: Cargo.toml
leaf-server/src/: main.rs  peer.rs  storage.rs
leaf-test-client/: Cargo.toml
leaf-test-client/src/: main.rs
leafclient/: Cargo.toml
leafclient/src/: args.rs  main.rs  meta.rs
leafcommon/: Cargo.toml
leafcommon/src/: chunks.rs  crypto.rs  lib.rs  message.rs  shards.rs
leafcore/: Cargo.toml
leafcore/src/: lib.rs
leafcore/src/codec/: base64.rs  codec.rs  errors.rs  mod.rs
leafcore/src/crypto/: aes.rs  encryptor.rs  errors.rs  gost.rs  initialization.rs  mod.rs
leafcore/src/hash/: gost.rs  hasher.rs  mod.rs  sha.rs
leafcore/src/messages/: errors.rs  mod.rs
leafcore/src/peer/client/: mod.rs
leafcore/src/peer/server/: mod.rs
leafcore/src/shared_secret/: mod.rs
leafd/: Cargo.toml
leafd/src/: linux.rs  main.rs  server.rs  socket.rs  stor.rs  windows.rs
leafdaemon/: Cargo.toml
leafdaemon/src/: main.rs
leaffs/: Cargo.toml
leaffs/src/: main.rs
leaffs/src/fs/: mod.rs
leaflibrary/: Cargo.toml
leaflibrary/src/: client.rs  crypto.rs  lib.rs  message.rs  server.rs  shared_secret.rs  storage.rs
leafpeer/: Cargo.toml
leafpeer/src/: lib.rs
leafpeer/src/hash/: mod.rs
leafpeer/src/peer/client/: mod.rs
leafpeer/src/storage/: mod.rs
peer/: Cargo.toml
peer/src/: server.rs
server/: Cargo.toml
server/src/: config.rs  lib.rs  linux.rs  main.rs  peer.rs  server.rs  socket.rs  stor.rs  storage.rs  windows.rs
server/src/platform/: unix.rs  windows.rs
src/: args.rs  client.rs  client_peer.rs  codec.rs  consts.rs  crypto.rs  fs.rs  handler.rs  hash.rs  lib.rs  lib_1.rs  main.rs  message.rs  peer.rs  sentfile.rs  server.rs  server_peer.rs  shared_secret.rs  storage.rs  udpclient.rs
src/codec/: codec.rs  errors.rs  mod.rs
src/crypto/: encryptor.rs  errors.rs  initialization.rs  mod.rs
src/hash/: errors.rs  hasher.rs  mod.rs
src/lib/: message.rs  mod.rs  server.rs  storage.rs
src/messages/: errors.rs  types.rs
src/peer/: client.rs
src/peer/client/: errors.rs  peer.rs  storage.rs
src/peer/server/: mod.rs  peer.rs  storage.rs
src/shared_secret/: errors.rs  mod.rs  sharer.rs
testclient/: Cargo.toml
testclient/src/: main.rs
testserver/: Cargo.toml
testserver/src/: main.rs
tools/: Cargo.toml
