[package]
name = "leaf"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "common",
    "client",
    "server",
]

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
bincode = "1.3.3"
reed-solomon-erasure = "6.0.0"
streebog = "0.10.2"
kuznechik = "0.4.0"
rand = "0.8.5"
rayon = "1.10.0"
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }

[lib]
name = "common"
path = "common/src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "server"
path = "server/src/main.rs"

[[bin]]
name = "client"
path = "client/src/main.rs"
