[workspace]
resolver = "2"
members = ["leafcommon", "leaf-client", "server"]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
base64 = "0.22.1"
rayon = "1.10.0"
clap = "4.5.27"
clap_derive = "4.5.24"
