[workspace]
resolver = "2"
members = ["leafcommon", "leafclient", "leafd"]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
rayon = "1.10.0"
clap = "4.5.27"
clap_derive = "4.5.24"
base64 = "0.22.1"
