[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
common = { path = "../common" }
clap_derive = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
dialoguer = "0.11.0"

[target.'cfg(unix)'.dependencies]
nix = "0.26.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winbase",
    "securitybaseapi",
    "handleapi",
    "errhandlingapi",
] }

[[bin]]
name = "client"
