[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
common = { path = "../common" }
clap_derive = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
dialoguer = "0.11.0"
windows-sys = "0.59.0"

[target.'cfg(unix)'.dependencies]
nix = "0.26.2"
users = "0.11.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Security",
] }

[[bin]]
name = "client"
