[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
base64 = "0.22.1"
rand = "0.8.5"
kuznyechik = "0.8.2"
streebog = "0.10.2"
argon2 = "0.5.3"
reed-solomon-erasure = "6.0.0"
rayon = "1.10.0"
tokio = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Security", "Win32_Foundation"] }

[target.'cfg(not(windows))'.dependencies]
pam = "0.8.0"

[lib]
name = "common"
crate-type = ["rlib"]
