[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8.5"
kuznyechik = "0.8.2"
streebog = "0.10.2"
argon2 = "0.5.3"
reed-solomon-erasure = "6.0.0"
tokio = { workspace = true }
hex = "0.4.3"
rayon = { workspace = true }
bincode = "1.3.3"
zstd = "0.13.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Security",
    "Win32_Foundation",
] }

[target.'cfg(not(windows))'.dependencies]
pam = "0.8.0"

[lib]
name = "common"
crate-type = ["rlib"]
