[package]
name = "leaf-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
leafcommon = { path = "../leafcommon" }
clap_derive = { workspace = true }
clap = { workspace = true }
dialoguer = "0.11.0"

[target.'cfg(unix)'.dependencies]
nix = "0.26.2"
users = "0.11.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Security",
] }

[[bin]]
name = "leaf-client"
