[package]
name = "leaf-common"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0.34"
kuznechik = "0.4.0"
dirs = "5.0.1"
tokio = { version = "1.40.0", features = ["full"] }
rand = "0.8.5"
streebog = "0.10.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
aes-gcm = "0.10.3"
reed-solomon-erasure = "6.0.0"
rayon = "1.10.0"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]
