[package]
name = "leaf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-address = "0.6.3"
tokio = { version = "1.40.0", features = ["full"] }
leaf-common = { path = "../leaf-common" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dirs = "5.0.1"
libc = "0.2.159"

[[bin]]
path = "src/main.rs"
name = "leaf-server"
