[package]
name = "leafd"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12.0", features = ["v4", "rng"] }
tokio = { workspace = true }
leafcommon = { path = "../leafcommon" }
clap = { workspace = true }
clap_derive = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }

[[bin]]
name = "leafd"
