[package]
name = "leafd"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12.0", features = ["v4", "rng"] }
tokio = { workspace = true }
leafcommon = { path = "../leafcommon" }
clap = { workspace = true }
clap_derive = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
windows-service = { version = "0.8.0", optional = true }
systemd = { version = "0.10.0", optional = true }

[[bin]]
name = "leafd"

[features]
default = []
windows = ["windows-service"]
linux = ["systemd"]
