[package]
name = "leafd"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12.0", features = ["v4", "rng"] }
tokio = { workspace = true }
leafcommon = { path = "../leafcommon" }
clap = { workspace = true }
clap_derive = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8.0"

[[bin]]
name = "leafd"
