[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12.0", features = ["v4", "rng"] }
tokio = { workspace = true }
common = { path = "../common" }
walkdir = "2.5.0"
clap = { workspace = true }
clap_derive = { workspace = true }
log = "0.4"
env_logger = "0.10"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Services",
] }
[target.'cfg(not(windows))'.dependencies]
nix = "0.26"

[[bin]]
name = "server"
