[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12.0", features = ["v4", "rng"] }
tokio = { workspace = true }
common = { path = "../common" }
walkdir = "2.5.0"
clap = { workspace = true }
clap_derive = { workspace = true }
log = "0.4"
env_logger = "0.10"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"

[[bin]]
name = "server"
